2.3 (#4624)
* Merged viewscope fix from master

Signed-off-by: arjantijms <arjan.tijms@gmail.com>

* Merged viewscope fix from master

Signed-off-by: arjantijms <arjan.tijms@gmail.com>

* #4293 Removed JAXB dependency

Conflicts:
	impl/src/main/java/com/sun/faces/util/ByteArrayGuardAESCTR.java

Signed-off-by: Guillermo González de Agüero <z06.guillermo@gmail.com>